@@ -17,15 +17,17 @@
 package com.broadcom.tvinput;
 
 import android.app.AlarmManager;
+import android.content.ContentProviderOperation;
+import android.content.ContentProviderResult;
 import android.content.ContentUris;
 import android.content.ContentValues;
 import android.content.Context;
 import android.content.Intent;
+import android.content.OperationApplicationException;
 import android.content.pm.PackageManager;
 import android.content.pm.ResolveInfo;
 import android.database.Cursor;
 import android.media.tv.TvContract;
-import android.media.tv.TvContract.Programs;
 import android.media.tv.TvInputHardwareInfo;
 import android.media.tv.TvInputInfo;
 import android.media.tv.TvInputManager;
@@ -35,6 +37,7 @@ import android.media.tv.TvTrackInfo;
 import android.net.Uri;
 import android.os.Bundle;
 import android.os.Handler;
+import android.os.RemoteException;
 import android.os.SystemClock;
 import android.util.Log;
 import android.util.Pair;
@@ -48,9 +51,9 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.lang.Long;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.security.InvalidParameterException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -69,7 +72,7 @@ import java.util.concurrent.locks.ReentrantLock;
  */
 
 public class TunerService extends TvInputService {
-    private static final boolean DEBUG = true;
+    private static final boolean DEBUG = false;
     private static final String TAG = TunerService.class.getSimpleName();
     private static final TvStreamConfig[] EMPTY_STREAM_CONFIGS = {};
 
@@ -83,7 +86,7 @@ public class TunerService extends TvInputService {
     private final Map<String, TvInputInfo> mInputMap = new HashMap<>();
 
     // broadcast channel_id -> channelId
-    private final Map<String, Long> mBroadcastChannelIdMap = new HashMap<>();
+    private final BiMap<String, Long> mBroadcastChannelIdMap = new BiMap<>();
 
     // broadcast channel_id,program_id -> programId
     private final Map<Pair<String, String>, Long> mBroadcastProgramIdMap = new HashMap<>();
@@ -138,25 +141,6 @@ public class TunerService extends TvInputService {
         if (api.end_time_utc_millis != pi.end_time_utc_millis) {
             Log.d(TAG, "DatabaseSyncTask: different end " + api.end_time_utc_millis + " " + pi.end_time_utc_millis);
             return true;
-        }
-        return false;
-    }
-
-    private static void insertProgram(Context context, long channelId, ProgramInfo program) {
-        ContentValues prog_values = buildProgramValues(channelId, program, true);
-        context.getContentResolver().insert(TvContract.Programs.CONTENT_URI, prog_values);
-    }
-
-    private static void updateProgram(Context context, long programId, ProgramInfo program) {
-        ContentValues prog_values = buildProgramValues(0, program, false);
-        context.getContentResolver().update(TvContract.buildProgramUri(programId), prog_values, null, null);
-    }
-
-    private boolean isAtleastOneSessionTuned() {
-        for(TunerTvInputSessionImpl session : sessionSet) {
-            if (!session.mCurrentChannelId.equals("")) {
-                return true;
-            }
         }
         return false;
     }
@@ -333,6 +317,7 @@ public class TunerService extends TvInputService {
         private class DatabaseSyncTask implements Runnable {
 
             private final String inputId;
+            private static final int BATCH_MAX_SIZE = 100;
 
             private void insertProgram(long channelId, ProgramInfo program) {
                 ContentValues prog_values = buildProgramValues(channelId, program, true);
@@ -433,9 +418,43 @@ public class TunerService extends TvInputService {
                 channelcursor.close();
             }
 
+            /**
+             * @brief Convert HAL channel id into TVContract row id
+             * @param channel_id channel ID returned by TunerHAL
+             * @return row id in TVContract.Channels table
+             */
+            private Long mapChannelId(String channel_id)
+            {
+                Long channelId = null;
+                synchronized (mBroadcastChannelIdMap) {
+                    if (mBroadcastChannelIdMap.containsKey(channel_id)) {
+                        channelId = mBroadcastChannelIdMap.get(channel_id);
+                        if (DEBUG)
+                            Log.d(TAG, "mapChannelId(" + channel_id + ") --> " + channelId);
+                    }
+                    else {
+                        Log.w(TAG, "mapChannelId(" + channel_id + ") --> unknown");
+                    }
+                }
+                return channelId;
+            }
+
+            private void deleteAllPrograms(String channel_id)
+            {
+                Long channelId = mapChannelId(channel_id);
+                if (channelId != null) {
+                    Uri uri = TvContract.buildProgramsUriForChannel(channelId.longValue());
+                    getContentResolver().delete(uri, null, null);
+                    Log.d(TAG, "deleteAllPrograms(" + channel_id + ") succeeded");
+                }
+                else {
+                    Log.e(TAG, "deleteAllPrograms(" + channel_id + ") failed");
+                }
+            }
+
             private void deleteProgramUpdate(String channel_id, String id, boolean expire)
             {
-                Pair<String, String> key = new Pair(channel_id, id);
+                Pair<String, String> key = new Pair<String, String>(channel_id, id);
                 int rows = 0;
                 if (mBroadcastProgramIdMap.containsKey(key)) {
                     Long programId = mBroadcastProgramIdMap.get(key);
@@ -454,21 +473,23 @@ public class TunerService extends TvInputService {
                 }
             }
 
-            private void insertProgramUpdate(ProgramUpdateInfo pui) {
-                if (mBroadcastChannelIdMap.containsKey(pui.channel_id)) {
-                    Long channelId = mBroadcastChannelIdMap.get(pui.channel_id);
+            private ContentProviderOperation insertProgramUpdate(ProgramUpdateInfo pui) {
+                ContentProviderOperation operation = null;
+                Long channelId = mapChannelId(pui.channel_id);
+                if (channelId != null) {
                     ContentValues prog_values = buildProgramValuesFromUpdate(channelId.longValue(), pui, true);
-                    Uri uri = getContentResolver().insert(TvContract.Programs.CONTENT_URI, prog_values);
-                    if (uri != null) {
-                        long programId = ContentUris.parseId(uri);
-                        mBroadcastProgramIdMap.put(new Pair(pui.channel_id, pui.id), new Long(programId));
-                        Log.d(TAG, "insertProgramUpdate(" + pui.channel_id + ", " + pui.id + ") succeeded: mapped to " + programId);
-                    }
+                    operation = ContentProviderOperation.newInsert(
+                            TvContract.Programs.CONTENT_URI)
+                            .withValues(prog_values)
+                            .build();
+                    if (DEBUG)
+                        Log.d(TAG, "insertProgramUpdate(" + pui.channel_id + ", " + pui.id + ")");
                 }
+                return operation;
             }
 
             private void updateProgramUpdate(ProgramUpdateInfo pui) {
-                Pair<String, String> key = new Pair(pui.channel_id, pui.id);
+                Pair<String, String> key = new Pair<String, String>(pui.channel_id, pui.id);
                 if (mBroadcastProgramIdMap.containsKey(key)) {
                     Long programId = mBroadcastProgramIdMap.get(key);
                     ContentValues prog_values = buildProgramValuesFromUpdate(0, pui, false);
@@ -480,26 +501,94 @@ public class TunerService extends TvInputService {
                 }
             }
 
+            private void addMappings(ArrayList<Pair<String, String>> keys,
+                    ContentProviderResult[] results)
+            {
+                //Assumption: the order and size of the results array
+                //is the same as the order and size of keys
+
+                if (keys.size() != results.length) {
+                    throw new InvalidParameterException(
+                            "wrong number of results: keys=" + keys.size() +
+                            ", results=" + results.length);
+                }
+
+                for (int i = 0; i < results.length; i++) {
+                    Pair<String, String> key = keys.get(i);
+                    long programId = ContentUris.parseId(results[i].uri);
+                    mBroadcastProgramIdMap.put(
+                            key, Long.valueOf(programId));
+                    if (DEBUG)
+                        Log.d(TAG, "new program ID mapping: (" +
+                                key.first + ", " + key.second +
+                                ") --> " + programId);
+                }
+            }
+
+            private void applyBatch(ArrayList<ContentProviderOperation> ops,
+                    ArrayList<Pair<String, String>> keys)
+            {
+                if (ops.size() <= 0)
+                    return; //nothing to do
+
+                Log.i(TAG, "applying batch of " + ops.size() + " operations");
+                try {
+                    ContentProviderResult[] results;
+                    results = getContentResolver().applyBatch(
+                            TvContract.AUTHORITY, ops);
+                    Log.d(TAG, "applied " + Integer.valueOf(ops.size()) +
+                            "ops, got " + results.length + " results");
+                    addMappings(keys, results);
+                    ops.clear();
+                    keys.clear();
+                } catch (RemoteException | OperationApplicationException e) {
+                    Log.e(TAG, "Failed to apply batch.", e);
+                }
+            }
+
             private boolean updatePrograms()
             {
-                ProgramUpdateInfo puiv[] = TunerHAL.getProgramUpdateList();
+                ArrayList<ContentProviderOperation> insertions = new ArrayList<>();
+                ArrayList<Pair<String, String>> keys = new ArrayList<>();
+                ProgramUpdateInfo puiv[] = TunerHAL.getProgramUpdateList(BATCH_MAX_SIZE);
                 for (ProgramUpdateInfo pui : puiv) {
-                    Log.d(TAG, "DatabaseSyncTask::Got programUpdate " + pui.type + " " + pui.channel_id + " " + pui.id);
+                    Log.i(TAG, "DatabaseSyncTask::Got programUpdate " +
+                            pui.type + " " + pui.channel_id + " " + pui.id);
                     switch (pui.type) {
                     case ADD:
-                        insertProgramUpdate(pui);
+                        ContentProviderOperation insert = insertProgramUpdate(pui);
+                        if (insert != null)
+                            insertions.add(insert);
+                            keys.add(new Pair<String, String>(pui.channel_id, pui.id));
                         break;
                     case DELETE:
+                        applyBatch(insertions, keys); //apply all pending additions first
                         deleteProgramUpdate(pui.channel_id, pui.id, false);
                         break;
                     case EXPIRE:
+                        applyBatch(insertions, keys); //apply all pending additions first
                         deleteProgramUpdate(pui.channel_id, pui.id, true);
                         break;
                     case UPDATE:
+                        applyBatch(insertions, keys); //apply all pending additions first
                         updateProgramUpdate(pui);
                         break;
+                    case CLEAR_CHANNEL:
+                        applyBatch(insertions, keys); //apply all pending additions first
+                                                      //(might be for different channels)
+                        deleteAllPrograms(pui.channel_id);
+                        break;
+                    case CLEAR_ALL:
+                        Log.d(TAG, "Clear all EPG programs");
+                        insertions.clear(); //everything will be deleted so don't add
+                        keys.clear(); //everything will be deleted so don't add
+                        getContentResolver().delete(
+                                TvContract.Programs.CONTENT_URI, null, null);
+                        break;
+                    // no default to catch missing case statements
                     }
                 }
+                applyBatch(insertions, keys); //apply all pending additions
 
                 return puiv.length > 0;
             }
@@ -556,6 +645,7 @@ public class TunerService extends TvInputService {
         DatabaseSync(String id) {
             task = new DatabaseSyncTask(id);
             thread = new Thread(task);
+            thread.setPriority(Thread.MIN_PRIORITY);
             thread.start();
         }
     }
@@ -602,6 +692,18 @@ public class TunerService extends TvInputService {
         SCANNING_START,
         SCANNING_PROGRESS,
         SCANNING_COMPLETE,
+    }
+
+    private void sendBroadcastTimeToAllSessions()
+    {
+        Bundle b = new Bundle();
+        long utc = TunerHAL.getUtcTime();
+        b.putLong("utc", utc);
+        if (DEBUG)
+            Log.d(TAG, "send broadcast time " + Long.valueOf(utc));
+        for(TunerTvInputSessionImpl session : sessionSet) {
+            reflectedNotifySessionEvent(session, "broadcastTime", b);
+        }
     }
 
     private void sendScanStatusToAllSessions()
@@ -853,7 +955,9 @@ public class TunerService extends TvInputService {
 
         long channelId = ContentUris.parseId(channelUri);
         Log.d(TAG, "channelId = " +channelId);
-        mBroadcastChannelIdMap.put(channel.id, new Long(channelId));
+        synchronized (mBroadcastChannelIdMap) {
+            mBroadcastChannelIdMap.put(channel.id, Long.valueOf(channelId));
+        }
 
         // Initialize the Programs class
         //ProgramInfo programs[] = TunerHAL.getProgramList(channel.id);
@@ -887,6 +991,8 @@ public class TunerService extends TvInputService {
     }
 
     private void updateChannels(Context context, String inputId, ChannelInfo channels[]) {
+        if (DEBUG)
+            Log.d(TAG, "--- updateChannels start ---");
         Uri uri = TvContract.buildChannelsUriForInput(inputId);
         // Get list of channelIds and bids
         String[] channelprojection = {
@@ -902,7 +1008,9 @@ public class TunerService extends TvInputService {
         List<String> skipList = new ArrayList<>();
 
         // Cache clear
-        mBroadcastChannelIdMap.clear();
+        synchronized (mBroadcastChannelIdMap) {
+            mBroadcastChannelIdMap.clear();
+        }
 
         if (channels.length > 0) {
             Cursor channelcursor = getContentResolver().query(uri, channelprojection, null, null, null); 
@@ -931,19 +1039,21 @@ public class TunerService extends TvInputService {
                             // Duplicate - don't re-add
                             skipList.add(dbci.id);
                             // But add to cache
-                            mBroadcastChannelIdMap.put(dbci.id, new Long(channelId));
+                            synchronized (mBroadcastChannelIdMap) {
+                                mBroadcastChannelIdMap.put(dbci.id, Long.valueOf(channelId));
+                            }
                         }
                         else {
                             // Remove from TvContract
                             // Already not in cache
-                            zapList.add(new Pair(new Long(channelId), dbci.id));
+                            zapList.add(new Pair<Long, String>(Long.valueOf(channelId), dbci.id));
                         }
                     }
                 }
                 channelcursor.close();
                 if (skipList.size() == 0) {
                     if (!databaseEmpty) {
-                        Log.d(TAG, "updateChannels: deleting all channels");
+                        Log.d(TAG, "updateChannels: deleting all channels for " + uri.toString());
                         getContentResolver().delete(uri, null, null);
                     }
                 }
@@ -970,6 +1080,8 @@ public class TunerService extends TvInputService {
                 Log.d(TAG, "updateChannels: preserving " + channel.id + " (" + channel.name + ")");
             }
         }
+        if (DEBUG)
+            Log.d(TAG, "--- updateChannels end ---");
     }
 
     private class TunerTvInputSessionImpl extends Session 
@@ -1114,23 +1226,16 @@ public class TunerService extends TvInputService {
         @Override
         public boolean onTune(Uri channelUri) 
         {
-
-            String[] projection = { TvContract.Channels.COLUMN_INTERNAL_PROVIDER_DATA };
             if (channelUri == null) {
                 return false;
             }
-            Cursor cursor = getContentResolver().query(
-                    channelUri, projection, null, null, null);
-            if (cursor == null) {
-                return false;
+            long channelId = ContentUris.parseId(channelUri);
+            String id = mCurrentChannelId;
+            synchronized (mBroadcastChannelIdMap) {
+                if (mBroadcastChannelIdMap.containsValue(channelId)) {
+                    id = mBroadcastChannelIdMap.rget(channelId); // reverse map
+                }
             }
-            if (cursor.getCount() < 1) {
-                cursor.close();
-                return false;
-            }
-            cursor.moveToNext();
-            String id = new String(cursor.getBlob(0));
-            cursor.close();
 
             Log.d(TAG, "onTune,  channelUri = " + channelUri + ", id = " + id);
 
@@ -1190,6 +1295,9 @@ public class TunerService extends TvInputService {
             }
             else if (action.equals("setClockFromStream")) {
                 forgeTime();
+            }
+            else if (action.equals("broadcastTime")) {
+                sendBroadcastTimeToAllSessions();
             }
 
         }
